--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 </head>
 <body>
 	<div ng-controller="StoreController as store"> <!--set an alias -->
-		<h1>{{store.product.name}}</h1>
-		<h2>{{store.product.price}}</h2>
-		<p>{{store.product.description}}</p>
+		<div ng-repeat="product in store.products">
+			<div ng-hide="product.soldOut"> <!-- don't show item at all when sold out --> 
+				<h1>{{product.name}}</h1>
+				<h2>{{product.price}}</h2>
+				<p>{{product.description}}</p>
+				<button ng-show="product.canPurchase">Add to Cart</button> <!-- only show button when expression is true --> 
+			</div>
+		</div>
 	</div>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
