--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 	<title>gemStore</title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/css/bootstrap.css">
 </head>
-<body>
-	<div ng-controller="StoreController as store"> <!--set an alias -->
-		<div ng-repeat="product in store.products">
-			<div ng-hide="product.soldOut"> <!-- don't show item at all when sold out --> 
-				<h1>{{product.name}}</h1>
-				<h2>{{product.price}}</h2>
-				<p>{{product.description}}</p>
-				<button ng-show="product.canPurchase">Add to Cart</button> <!-- only show button when expression is true --> 
-			</div>
-		</div>
-	</div>
+<body ng-controller="StoreController as store" class="container"> <!-- set an alias --> 
+	<ul class="list-group">
+		<li class="list-group-item" ng-repeat="product in store.products">
+			<h3 ng-hide="product.soldOut"> <!-- hide if expression true --> 
+				{{product.name}}
+					<em class="pull-right">${{product.price}}</em>
+			</h3>
+			<p>{{product.description}}</p>
+			<button ng-show="product.canPurchase">Add to Cart</button> <!-- only show button when expression is true --> 
+		</li>
+	</ul>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
 </body>
