clean up look of form a bit

--- a/index.html
+++ b/index.html
@@ -48,23 +48,31 @@
 
 					<form name="reviewForm" ng-controller="ReviewController as reviewCtrl" ng-submit="reviewForm.$valid && reviewCtrl.addReview(product)" novalidate> <!-- on submit send in current product we're iterating through --> 
 					<!-- turn off built in browser validation with novalidate --> 
-						<blockquote>
+
+					<blockquote>
 						<p>	<b>Stars: {{reviewCtrl.review.stars}}</b></p>
 						<p>{{reviewCtrl.review.body}} </p>
 						<p><cite>by: {{reviewCtrl.review.author}}</cite></p>
 					</blockquote>
+					
+					<div class="row">
+					<div class="col-md-6">
+					<fieldset class="form-group">
+						<select ng-model="reviewCtrl.review.stars" ng-options="stars for stars in [5,4,3,2,1]" title="stars" class="form-control" required>
+							<option value="">Rate The Product</option>
+						</select>
+					</fieldset>
+					
+					<fieldset class="form-group">
+						<textarea ng-model="reviewCtrl.review.body" class="form-control"cols="10" rows="1" placeholder="Write a short review..." title="Review" required></textarea>
+					</fieldset>
 
-					<select ng-model="reviewCtrl.review.stars" required>
-						<option value="1">1 star</option>
-						<option value="2">2 star</option>
-						<option value="3">3 star</option>
-						<option value="4">4 star</option>
-						<option value="5">5 star</option>
-					</select>
-
-					<textarea ng-model="reviewCtrl.review.body" cols="10" rows="1" required></textarea>
-					<input type="email" ng-model="reviewCtrl.review.author" required>
-					<input type="submit" value="submit">
+					<fieldset class="form-group">
+						<input type="email" ng-model="reviewCtrl.review.author" required>
+						<input type="submit" class="btn btn-primary pull-right" value="submit">
+					</fieldset>
+					</div>
+					</div>
 					</form>
 				</div>
 			</section>
