--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
 	</ul>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.0/angular.min.js"></script>
 	<script type="text/javascript" src="scripts/app.js"></script>
+	<script type="text/javascript" src="scripts/products.js"></script>
 </body>
 </html>
